Fix examples to use new layout grid, fix icon layout issue

--- a/src/ids-button/ids-button.scss
+++ b/src/ids-button/ids-button.scss
@@ -66,6 +66,8 @@
   ::slotted(ids-icon) {
     @include block();
     @include pl-0();
+
+    font-size: 0;
   }
 
   .ripple-effect {
